# cuda-matmul-benchmarking

./: CMakeLists.txt  README.md
src/: benchmark.cu  benchmark.cuh  coalesced_matmul.cu  coalesced_matmul.cuh  cpu_matmul.cpp  cpu_matmul.cu  cpu_matmul.cuh  cpu_matmul.h  main.cu  matmul_helpers.cu  matmul_helpers.cuh  naive_matmul.cu  naive_matmul.cuh  tiled_coalesced_matmul.cu  tiled_coalesced_matmul.cuh  tiled_matmul.cu  tiled_matmul.cuh
